--- a/01/01/cv/style.css
+++ b/01/01/cv/style.css
@@ -44,3 +44,24 @@ a:link,
 a:visited {
   color: black;
 }
+img {
+  width: 300px;
+  height: 300px;
+}
+
+@media only screen and (max-width: 500px) {
+  main {
+    align-items: center;
+    padding-left: 0;
+    text-align: center;
+  }
+  div {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  img {
+    width: 150px;
+    height: 150px;
+  }
+}
