--- a/01/01/cv/style.css
+++ b/01/01/cv/style.css
@@ -1,67 +1,212 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@font-face {
+  font-family: "NEXON Lv2 Gothic";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "NEXON Lv2 Gothic Bold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic Bold.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Material Icons";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local("Material Icons"), local("MaterialIcons-Regular"),
+    url(https://example.com/MaterialIcons-Regular.woff2) format("woff2"),
+    url(https://example.com/MaterialIcons-Regular.woff) format("woff"),
+    url(https://example.com/MaterialIcons-Regular.ttf) format("truetype");
+}
+.material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr; /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased; /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility; /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale; /* Support for IE. */
+  font-feature-settings: "liga";
+}
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800&display=swap");
+
 * {
   margin: 0;
   padding: 0;
-  font-family: "Do Hyeon", sans-serif;
+  font-family: "NEXON Lv2 Gothic";
 }
 body {
   height: 100vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
 }
+
+/* ////////header */
 header {
-  background-color: gray;
-  color: white;
+  background-color: #f0f0f0;
+  color: rgb(62, 62, 62);
   text-decoration: none;
-  padding-left: 10px;
-}
-main {
+  width: 40%;
   height: 100%;
   padding-left: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-between;
 }
-footer {
-  background-color: lightgray;
-  padding-left: 10px;
+
+.header__main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-ul a {
-  text-decoration: none;
+
+.header__main-img {
+  margin-bottom: 20px;
+  width: 60%;
 }
+
+.header__title {
+  margin-top: 10%;
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+  text-transform: uppercase;
+  line-height: 6.5vh;
+  font-weight: 600;
+}
+.header__title-first-line {
+  font-size: 2.2rem;
+  font-weight: 550;
+}
+.header__title-daeun {
+  font-family: "NEXON Lv2 Gothic Bold";
+  font-size: 3rem;
+  text-decoration: underline 1rem #f8cd07;
+}
+.header__main-information {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10%;
+}
+.header__main-information-u {
+  display: flex;
+  flex-direction: column;
+  padding-top: 1.4rem;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+  padding-left: 1.5rem;
+}
+
 li {
   list-style: none;
 }
-section {
-  width: 50%;
-  margin-bottom: 20px;
+
+#badge {
+  font-size: 7rem;
+
+  color: rgb(62, 62, 62);
+  margin-right: 1rem;
 }
-div {
+
+main {
+  width: 60%;
+  background-color: #e4e4e4;
+
+  padding: 3vh 8vh;
+}
+
+/* ////main */
+.container {
+  height: 90%;
+
+  flex-direction: column;
+  padding: 3vh 5vh;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: white;
   display: flex;
-  flex-wrap: wrap;
-}
-a:link,
-a:visited {
-  color: black;
-}
-img {
-  width: 300px;
-  height: 300px;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-@media only screen and (max-width: 500px) {
-  main {
-    align-items: center;
-    padding-left: 0;
-    text-align: center;
+.content__title {
+  letter-spacing: 0.2rem;
+  padding-bottom: 0.8rem;
+  font-size: 1.7rem;
+  color: #3e3e3e;
+  width: 100%;
+  border-bottom: 0.2rem solid #f8cd07;
+  margin-bottom: 1rem;
+}
+
+.contet__subtitle-explan {
+  padding-left: 2rem;
+  font-weight: 500;
+}
+
+.content__p {
+  font-size: 1.2rem;
+}
+
+.contet__subtitle-explan > * {
+  margin-bottom: 2vh;
+  font-weight: 600;
+  color: #3e3e3e;
+}
+
+#check {
+  font-size: 2vh;
+  font-weight: 900;
+  color: #f8cd07;
+  margin-right: 1vh;
+}
+
+@media only screen and (max-width: 1000px) {
+  html {
+    font-size: 70%;
   }
-  div {
+  body {
     flex-direction: column;
-    align-items: center;
+    height: 100%;
   }
-
-  img {
-    width: 150px;
-    height: 150px;
+  header {
+    width: 100%;
+  }
+  main {
+    width: 100%;
+  }
+  .header__main-img {
+    width: 40%;
+  }
+  .header__title {
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  .content {
+    margin-bottom: 2rem;
+  }
+  .container {
+    width: 100%;
+  }
+  main {
+    padding: 0;
+  }
+  .header__main {
+    margin-bottom: 2rem;
   }
 }
